# occt_segfault

./: CMakeLists.txt  README.md  backtrace  main.cpp
